Add multiple pypy versions in tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,14 @@
 [tox]
-envlist = py26,py27,py32,pypy
+envlist = py26,py27,py32,pypy18,pypy19
+
 [testenv]
 # changedir=demo
 commands=py.test
 deps =
      pytest
+
+[testenv:pypy18]
+python=pypy-c1.8
+
+[testenv:pypy19]
+python=pypy-c1.9
