Fix multi-pypy version

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
      pytest
 
 [testenv:pypy18]
-python=pypy-c1.8
+basepython=pypy-c1.8
 
 [testenv:pypy19]
-python=pypy-c1.9
+basepython=pypy-c1.9
