Add python3.4 to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,8 @@
 [tox]
-envlist = py26,py27,py32,py33,pypy20
+envlist = py26,py27,py32,py33,py34,pypy20
 
 [testenv]
 # changedir=demo
 commands=py.test
 deps =
      pytest
-
-[testenv:pypy18]
-basepython=pypy-c1.8
-
-[testenv:pypy19]
-basepython=pypy-c1.9
