--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,9 @@
 [tox]
-envlist = py26,py27,py32,py33,pypy20
+envlist = py26,py27,py32,py33,py34,pypy
 
 [testenv]
-# changedir=demo
-commands=py.test
-deps =
-     pytest
-
-[testenv:pypy18]
-basepython=pypy-c1.8
-
-[testenv:pypy19]
-basepython=pypy-c1.9
+deps = pytest-cov
+commands =
+  coverage erase
+  py.test --junitxml=junit-{envname}.xml --cov cutter
+  coverage xml -o coverage-{envname}.xml
