--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,6 @@ envlist = py26,py27,py32,py33,py34,pypy
 deps = pytest-cov
 commands =
   coverage erase
-  py.test --junitxml=junit-{envname}.xml --cov cutter
+  py.test --junitxml=junit-{envname}.xml --cov brigit
   coverage xml -o coverage-{envname}.xml
 
