--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,13 @@
 envlist = py26,py27,py33,py34,pypy
 
 [testenv]
-deps = pytest-cov
-commands =
-  coverage erase
-  py.test --junitxml=junit-{envname}.xml --cov brigit
-  coverage xml -o coverage-{envname}.xml
+deps =
+    pytest
+    coverage
 
+setenv =
+    COVERAGE_FILE=.cov-{envname}
+
+commands=
+  coverage run --source=brigit {envbindir}/py.test --junitxml=junit-{envname}.xml
+  coverage xml -o coverage-{envname}.xml
