--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ before_script:
   # This is mandatory for brigit to work
   - git config --global user.email "gitlab-runner@exemple.com"
   - git config --global user.name "Gitlab Runner"
+  - git config --global advice.statusHints false
 
 .test_template: &test_job
   tags:
